--- a/index.html
+++ b/index.html
@@ -3,85 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education Info</title>
+    <title>Punjab Results & TikTok Accounts</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f7f7f7;
+            background: #f9f9f9;
             text-align: center;
         }
         header {
-            background-color: #0077b6;
+            background: #2c3e50;
             color: white;
             padding: 15px;
-            font-size: 24px;
+            font-size: 22px;
         }
-        main {
-            padding: 20px;
+        .container {
+            margin: 20px;
         }
         button {
             padding: 10px 20px;
-            font-size: 18px;
-            background-color: #ff5722;
+            font-size: 16px;
+            margin: 10px;
+            background: #3498db;
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 5px;
         }
         button:hover {
-            background-color: #e64a19;
+            background: #2980b9;
         }
         .instructions {
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 15px;
+            background: #fff3cd;
+            border: 1px solid #ffeeba;
+            padding: 10px;
             margin-top: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            direction: rtl;
-            font-family: 'Noto Nastaliq Urdu', serif;
+            font-size: 16px;
         }
         footer {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #333;
-            color: white;
+            margin-top: 30px;
+            font-size: 14px;
+            color: gray;
         }
     </style>
-    <script>
-        function showWhatsApp() {
-            alert("TikTok UK aur USA accounts khareedne ke liye rabta karein: 03028647505");
-        }
-    </script>
 </head>
 <body>
 
-<header>Education Info</header>
+<header>
+    Punjab Board Results & TikTok Accounts
+</header>
 
-<main>
-    <h1>Welcome to Education Info</h1>
-    <p>Search for your class results and more.</p>
+<div class="container">
+    <h2>Check Your Board Result 2025</h2>
+    <p>Select your class and click the button to go to the official result page.</p>
 
-    <button onclick="showWhatsApp()">Buy TikTok UK & USA Accounts</button>
+    <button onclick="window.open('https://www.bisesahiwal.edu.pk/allresult')">9th Class Result</button>
+    <button onclick="window.open('https://www.bisesahiwal.edu.pk/allresult')">10th Class Result</button>
+    <button onclick="window.open('https://www.bisesahiwal.edu.pk/allresult')">1st Year Result</button>
+    <button onclick="window.open('https://www.bisesahiwal.edu.pk/allresult')">2nd Year Result</button>
+
+    <h2>Special Offer</h2>
+    <button onclick="window.open('https://wa.me/923028647505?text=Hello%2C%20I%20want%20to%20buy%20TikTok%20UK%20and%20USA%20accounts')">
+        Buy TikTok UK & USA Accounts
+    </button>
 
     <div class="instructions">
-        <h3>ہدایات</h3>
-        <p>یہ ویب سائٹ تمام کلاسز کے نتائج فراہم کرتی ہے۔</p>
-        <p>ٹک ٹاک یوکے اور یو ایس اے اکاؤنٹس صرف طلباء کے لیے 499 روپے میں دستیاب ہیں۔</p>
+        📌 Hidayat: TikTok UK & USA accounts available hain sirf student offer se 499 PKR me.  
+        Apna roll number theek se likh kar result check karein.
     </div>
 
     <h3>Visitor Counter</h3>
     <!-- hitwebcounter Code START -->
     <a href="https://www.hitwebcounter.com" target="_blank">
-        <img src="https://hitwebcounter.com/counter/counter.php?page=21378059&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" border="0" />
-    </a>
-    <!-- hitwebcounter Code END -->
-
-</main>
+    <img src="https://hitwebcounter.com/counter/counter.php?page=21378059&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" border="0" /></a>
+</div>
 
 <footer>
-    &copy; 2025 Education Info - All rights reserved.
+    &copy; 2025 Punjab Results | Designed by Muhammad Akbar
 </footer>
 
 </body>
