--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         button {
             padding: 10px 20px;
             font-size: 16px;
-            margin: 10px;
+            margin: 8px;
             background: #3498db;
             color: white;
             border: none;
@@ -56,12 +56,18 @@
 
 <div class="container">
     <h2>Check Your Board Result 2025</h2>
-    <p>Select your class and click the button to go to the official result page.</p>
+    <p>Apna Board select karein aur result page open karein:</p>
 
-    <button onclick="window.open('https://www.bisesahiwal.edu.pk/allresult')">9th Class Result</button>
-    <button onclick="window.open('https://www.bisesahiwal.edu.pk/allresult')">10th Class Result</button>
-    <button onclick="window.open('https://www.bisesahiwal.edu.pk/allresult')">1st Year Result</button>
-    <button onclick="window.open('https://www.bisesahiwal.edu.pk/allresult')">2nd Year Result</button>
+    <!-- Punjab Board Result Links -->
+    <button onclick="window.open('https://www.biselahore.com/')">Lahore Board</button>
+    <button onclick="window.open('https://www.bisesahiwal.edu.pk/')">Sahiwal Board</button>
+    <button onclick="window.open('https://www.bisefsd.edu.pk/')">Faisalabad Board</button>
+    <button onclick="window.open('https://www.bisemultan.edu.pk/')">Multan Board</button>
+    <button onclick="window.open('https://www.bisegrw.edu.pk/')">Gujranwala Board</button>
+    <button onclick="window.open('https://www.bisebwp.edu.pk/')">Bahawalpur Board</button>
+    <button onclick="window.open('https://www.biserwp.edu.pk/')">Rawalpindi Board</button>
+    <button onclick="window.open('https://www.bisesargodha.edu.pk/')">Sargodha Board</button>
+    <button onclick="window.open('https://www.bisedgkhan.edu.pk/')">DG Khan Board</button>
 
     <h2>Special Offer</h2>
     <button onclick="window.open('https://wa.me/923028647505?text=Hello%2C%20I%20want%20to%20buy%20TikTok%20UK%20and%20USA%20accounts')">
