--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Education Info + Zoo Roulette</title>
+<title>Education Info - Result Checker + Zoo Roulette</title>
 <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; background: #f4f4f4; }
+    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
     select, input { padding: 10px; margin: 10px; width: 80%; max-width: 300px; }
     button { padding: 10px 20px; background: green; color: white; border: none; cursor: pointer; }
     button:hover { background: darkgreen; }
     .counter { margin-top: 20px; }
-    .game-section { background: white; padding: 20px; margin-top: 30px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2); }
-    .chips { font-weight: bold; font-size: 18px; margin-bottom: 10px; }
-    .bet-btn { padding: 10px 20px; margin: 5px; font-size: 16px; border: none; border-radius: 5px; cursor: pointer; }
-    .bet10 { background: orange; color: white; }
-    .bet100 { background: red; color: white; }
+    iframe { border: none; }
 </style>
 <script>
 const boards = {
@@ -29,36 +25,20 @@ function updateBoards() {
     let province = document.getElementById("province").value;
     let boardSelect = document.getElementById("board");
     boardSelect.innerHTML = "";
-    boards[province].forEach(board => {
-        let opt = document.createElement("option");
-        opt.value = board;
-        opt.textContent = board;
-        boardSelect.appendChild(opt);
-    });
+    if(boards[province]){
+        boards[province].forEach(board => {
+            let opt = document.createElement("option");
+            opt.value = board;
+            opt.textContent = board;
+            boardSelect.appendChild(opt);
+        });
+    }
 }
 function checkResult() {
     let board = document.getElementById("board").value;
     let roll = document.getElementById("roll").value;
     if(!roll) { alert("Please enter Roll Number!"); return; }
     document.getElementById("resultFrame").src = "https://www.google.com/search?q=" + board + " result " + roll;
-}
-
-// Zoo Roulette game logic
-let chips = 5000;
-function updateChips() {
-    document.getElementById("chipCount").textContent = chips;
-}
-function playBet(amount) {
-    if (chips < amount) { alert("Not enough chips!"); return; }
-    chips -= amount;
-    let win = Math.random() < 0.5; // 50% win chance
-    if (win) {
-        chips += amount * 2;
-        alert("🎉 You Won! +" + amount + " chips");
-    } else {
-        alert("❌ You Lost -" + amount + " chips");
-    }
-    updateChips();
 }
 </script>
 </head>
@@ -102,21 +82,16 @@ function playBet(amount) {
 </div>
 
 <div class="counter">
+    <!-- hitwebcounter Code START -->
     <a href="https://www.hitwebcounter.com" target="_blank">
     <img src="https://hitwebcounter.com/counter/counter.php?page=21378059&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
 </div>
 
-<!-- Zoo Roulette Game -->
-<div class="game-section">
-    <h2>🎯 Zoo Roulette (Free Mode)</h2>
-    <div class="chips">💰 Chips: <span id="chipCount">5000</span></div>
-    <button class="bet-btn bet10" onclick="playBet(10)">Bet 10 Chips</button>
-    <button class="bet-btn bet100" onclick="playBet(100)">Bet 100 Chips</button>
-</div>
+<hr style="margin:40px 0;">
 
-<script>
-updateChips();
-</script>
+<h2>🎯 Play Zoo Roulette (Free Mode)</h2>
+<p>You have 5000 free chips. Enjoy!</p>
+<iframe src="https://www.casinogamesonnet.com/play/zoo-roulette" width="100%" height="600"></iframe>
 
 </body>
 </html>
