--- a/index.html
+++ b/index.html
@@ -2,96 +2,81 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Education Info - Result Checker + Zoo Roulette</title>
+<title>Zoo Roulette</title>
 <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-    select, input { padding: 10px; margin: 10px; width: 80%; max-width: 300px; }
-    button { padding: 10px 20px; background: green; color: white; border: none; cursor: pointer; }
-    button:hover { background: darkgreen; }
-    .counter { margin-top: 20px; }
-    iframe { border: none; }
-</style>
-<script>
-const boards = {
-    "Punjab": ["BISE Lahore", "BISE Faisalabad", "BISE Gujranwala", "BISE Multan", "BISE Rawalpindi", "BISE Sahiwal", "BISE Bahawalpur", "BISE DG Khan", "BISE Sargodha"],
-    "Sindh": ["BIEK Karachi", "BISE Hyderabad", "BISE Sukkur", "BISE Larkana", "BISE Mirpurkhas", "Aga Khan Board"],
-    "KPK": ["BISE Peshawar", "BISE Abbottabad", "BISE Swat", "BISE Kohat", "BISE Mardan", "BISE Dera Ismail Khan", "BISE Bannu", "BISE Malakand"],
-    "Balochistan": ["BISE Quetta"],
-    "AJK": ["BISE Mirpur AJK"],
-    "Federal": ["Federal Board Islamabad"]
-};
-function updateBoards() {
-    let province = document.getElementById("province").value;
-    let boardSelect = document.getElementById("board");
-    boardSelect.innerHTML = "";
-    if(boards[province]){
-        boards[province].forEach(board => {
-            let opt = document.createElement("option");
-            opt.value = board;
-            opt.textContent = board;
-            boardSelect.appendChild(opt);
-        });
+    body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; }
+    h1 { margin-top: 20px; }
+    #chips { font-size: 20px; margin: 10px; }
+    #animals { display: flex; justify-content: center; flex-wrap: wrap; margin-top: 20px; }
+    .animal {
+        width: 100px; height: 100px;
+        background: white; border: 2px solid #ccc; border-radius: 10px;
+        display: flex; align-items: center; justify-content: center;
+        margin: 5px; font-size: 24px; cursor: pointer;
+        transition: transform 0.2s;
     }
-}
-function checkResult() {
-    let board = document.getElementById("board").value;
-    let roll = document.getElementById("roll").value;
-    if(!roll) { alert("Please enter Roll Number!"); return; }
-    document.getElementById("resultFrame").src = "https://www.google.com/search?q=" + board + " result " + roll;
-}
-</script>
+    .animal:hover { transform: scale(1.1); border-color: #333; }
+    #result { font-size: 22px; margin-top: 20px; font-weight: bold; }
+    button { padding: 10px 20px; margin: 10px; font-size: 16px; cursor: pointer; }
+</style>
 </head>
 <body>
 
-<h1>Education Info - Online Results</h1>
+<h1>Zoo Roulette</h1>
+<div id="chips">Chips: 5000</div>
 
-<select id="class">
-    <option value="">Select Class</option>
-    <option>9th</option>
-    <option>10th</option>
-    <option>11th</option>
-    <option>12th</option>
-</select>
-
-<select id="province" onchange="updateBoards()">
-    <option value="">Select Province</option>
-    <option>Punjab</option>
-    <option>Sindh</option>
-    <option>KPK</option>
-    <option>Balochistan</option>
-    <option>AJK</option>
-    <option>Federal</option>
-</select>
-
-<select id="board">
-    <option value="">Select Board</option>
-</select>
-
-<input type="text" id="roll" placeholder="Enter Roll Number">
-<br>
-<button onclick="checkResult()">Check Result</button>
-
-<iframe id="resultFrame" style="width:100%; height:500px; margin-top:20px;"></iframe>
-
-<div style="margin-top:30px;">
-    <a href="https://wa.me/923028647505?text=I%20want%20to%20buy%20TikTok%20UK%20and%20USA%20accounts" style="color:blue; font-weight:bold;">
-        Buy TikTok UK & USA Accounts
-    </a>
-    <p><b>Hidayat:</b> TikTok UK & USA accounts available hain sirf student offer se 499 PKR me.</p>
+<div>
+    Bet Amount: 
+    <button onclick="setBet(10)">10</button>
+    <button onclick="setBet(100)">100</button>
 </div>
 
-<div class="counter">
-    <!-- hitwebcounter Code START -->
-    <a href="https://www.hitwebcounter.com" target="_blank">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=21378059&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
+<div id="animals">
+    <div class="animal" onclick="spin('🦁')">🦁</div>
+    <div class="animal" onclick="spin('🐘')">🐘</div>
+    <div class="animal" onclick="spin('🦓')">🦓</div>
+    <div class="animal" onclick="spin('🐒')">🐒</div>
+    <div class="animal" onclick="spin('🦅')">🦅</div>
+    <div class="animal" onclick="spin('🐍')">🐍</div>
 </div>
 
-<hr style="margin:40px 0;">
+<div id="result">Choose an animal to start</div>
 
-<h2>🎯 Play Zoo Roulette (Free Mode)</h2>
-<p>You have 5000 free chips. Enjoy!</p>
-<iframe src="https://www.casinogamesonnet.com/play/zoo-roulette" width="100%" height="600"></iframe>
+<script>
+let chips = 5000;
+let betAmount = 10;
+
+function setBet(amount) {
+    betAmount = amount;
+    alert("Bet set to " + amount + " chips");
+}
+
+function spin(choice) {
+    if (chips < betAmount) {
+        alert("Not enough chips!");
+        return;
+    }
+    chips -= betAmount;
+    updateChips();
+
+    const animals = ['🦁','🐘','🦓','🐒','🦅','🐍'];
+    const winAnimal = animals[Math.floor(Math.random() * animals.length)];
+
+    if (choice === winAnimal) {
+        chips += betAmount * 5; // 5x payout
+        document.getElementById("result").innerText = 
+            "🎉 You won! It was " + winAnimal;
+    } else {
+        document.getElementById("result").innerText = 
+            "😢 You lost! It was " + winAnimal;
+    }
+    updateChips();
+}
+
+function updateChips() {
+    document.getElementById("chips").innerText = "Chips: " + chips;
+}
+</script>
 
 </body>
 </html>
